--- a/index.html
+++ b/index.html
@@ -2,89 +2,51 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
   <title>عبدالملك الشاوي</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     body {
-      font-family: 'Tahoma', sans-serif;
-      background-color: #f9f9f9;
-      margin: 0;
-      padding: 0;
+      font-family: 'Arial', sans-serif;
+      background: #f4f4f4;
+      text-align: center;
+      padding: 40px;
       color: #333;
     }
-    header {
-      background-color: #2c3e50;
-      color: white;
-      padding: 50px 20px;
-      text-align: center;
+    h1 {
+      margin-bottom: 10px;
     }
-    section {
-      padding: 40px 20px;
-      max-width: 800px;
-      margin: auto;
+    p {
+      margin-top: 0;
+      font-size: 18px;
     }
-    h2 {
-      color: #2c3e50;
+    .icons {
+      margin-top: 30px;
     }
-    a {
-      color: #1e6ea6;
+    .icons a {
       text-decoration: none;
+      margin: 10px;
+      font-size: 32px;
+      color: #333;
+      transition: color 0.3s;
     }
-    .links a {
-      display: block;
-      margin: 10px 0;
-      font-weight: bold;
-    }
-    footer {
-      text-align: center;
-      padding: 20px;
-      font-size: 14px;
-      color: #777;
-      border-top: 1px solid #ddd;
+    .icons a:hover {
+      color: #007BFF;
     }
   </style>
 </head>
 <body>
+  <h1>عبدالملك الشاوي</h1>
+  <p>أشعري العقيدة • شافعي المذهب • صوفي المسلك</p>
+  <p>أعشق القراءة والكتب، وأحب كل مجاهد في سبيل الله</p>
 
-  <header>
-    <h1>عبدالملك الشاوي</h1>
-    <p>طالب معرفة، محب للكتب، وسالك طريق القرب</p>
-  </header>
-
-  <section>
-    <h2>من أنا</h2>
-    <p>
-      أنا عبدالملك الشاوي، مسلم أشعري العقيدة، شافعي المذهب، صوفي المسلك.
-      أستلهم طريقي من نور العلم وأثر الصالحين، وأجد في القراءة غذاءً للروح والعقل.
-      أؤمن بأن المجاهدة في سبيل الله ليست بالسيف فقط، بل بالعلم، والعمل، والإخلاص.
-    </p>
-  </section>
-
-  <section>
-    <h2>اهتماماتي</h2>
-    <ul>
-      <li>القراءة والتأمل في كتب العقيدة، الفقه، والتصوف</li>
-      <li>متابعة سِيَر المجاهدين والعلماء والدعاة</li>
-      <li>الكتابة ومشاركة المعاني التي تلامس القلب</li>
-    </ul>
-  </section>
-
-  <section>
-    <h2>روابطي</h2>
-    <div class="links">
-      <a href="https://www.instagram.com/ie.9ay?igsh=MTRsZWZqMjhwbzV6aw%3D%3D&utm_source=qr" target="_blank">إنستغرام</a>
-      <a href="https://t.me/abdalmlkshafay" target="_blank">تيليجرام</a>
-      <a href="https://www.facebook.com/share/17HvKBsQ6b/?mibextid=wwXIfr" target="_blank">فيسبوك</a>
-      <a href="https://x.com/ie_9ay?s=21" target="_blank">تويتر (X)</a>
-      <a href="https://www.tiktok.com/@ie.9ay?_t=ZS-8yRRKtR5VQY&_r=1" target="_blank">تيك توك</a>
-      <a href="https://tellonym.me/ebwd860/1word" target="_blank">صندوق الرسائل (Tellonym)</a>
-    </div>
-  </section>
-
-  <footer>
-    &copy; 2025 عبدالملك الشاوي. جميع الحقوق محفوظة.
-  </footer>
-
+  <div class="icons">
+    <a href="https://www.instagram.com/ie.9ay" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
+    <a href="https://t.me/abdalmlkshafay" target="_blank" title="Telegram"><i class="fab fa-telegram"></i></a>
+    <a href="https://www.facebook.com/share/17HvKBsQ6b" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a>
+    <a href="https://x.com/ie_9ay" target="_blank" title="X (Twitter)"><i class="fab fa-x-twitter"></i></a>
+    <a href="https://www.tiktok.com/@ie.9ay" target="_blank" title="TikTok"><i class="fab fa-tiktok"></i></a>
+    <a href="https://tellonym.me/ebwd860/1word" target="_blank" title="Tellonym"><i class="fas fa-question-circle"></i></a>
+  </div>
 </body>
 </html>
