--- a/index.html
+++ b/index.html
@@ -1,84 +1,81 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <title>عبدالملك الشاوي</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>ie.9ay | عبدالملك الشاوي</title>
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@500;700&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Arial', sans-serif;
-      background: #ffffff;
-      color: #111;
+      font-family: 'Cairo', sans-serif;
+      background-color: #f4f4f4;
       text-align: center;
-      padding: 50px 20px;
+      margin: 0;
+      padding: 0;
     }
-
+    .header {
+      background: #fff;
+      padding: 30px 20px;
+      border-bottom: 1px solid #ccc;
+    }
+    .profile-img {
+      width: 140px;
+      height: 140px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-bottom: 15px;
+      border: 4px solid #007bff;
+    }
     h1 {
-      font-size: 32px;
-      margin-bottom: 10px;
+      margin: 10px 0 5px;
+      font-size: 24px;
+      color: #222;
     }
-
     p {
+      margin: 0;
+      font-size: 16px;
+      color: #777;
+    }
+    .link-button {
+      display: block;
+      width: 90%;
+      max-width: 400px;
+      margin: 10px auto;
+      padding: 15px;
+      background-color: #fff;
+      border-radius: 12px;
       font-size: 18px;
-      margin-top: 5px;
-    }
-
-    .minimal-icons {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 25px;
-      margin-top: 40px;
-    }
-
-    .minimal-icons a {
-      font-size: 28px;
+      font-weight: bold;
       color: #000;
       text-decoration: none;
-      transition: opacity 0.3s;
+      transition: 0.3s;
+      box-shadow: 0 3px 6px rgba(0,0,0,0.1);
     }
-
-    .minimal-icons a:hover {
-      opacity: 0.5;
+    .link-button:hover {
+      transform: scale(1.02);
     }
-
-    .label {
-      display: block;
-      font-size: 14px;
-      margin-top: 5px;
-    }
+    .insta { border-right: 10px solid #C13584; }
+    .tg    { border-right: 10px solid #0088cc; }
+    .fb    { border-right: 10px solid #1877F2; }
+    .tw    { border-right: 10px solid #1DA1F2; }
+    .tt    { border-right: 10px solid #000000; }
+    .telon { border-right: 10px solid #ffb600; }
   </style>
 </head>
 <body>
-  <h1>عبدالملك الشاوي</h1>
-  <p>أشعري العقيدة • شافعي المذهب • صوفي المسلك</p>
-  <p>أعشق القراءة والكتب، وأحب كل مجاهد في سبيل الله</p>
 
-  <div class="minimal-icons">
-    <a href="https://www.instagram.com/ie.9ay" target="_blank" title="Instagram">
-      <i class="fab fa-instagram"></i>
-      <span class="label">انستقرام</span>
-    </a>
-    <a href="https://t.me/abdalmlkshafay" target="_blank" title="Telegram">
-      <i class="fab fa-telegram"></i>
-      <span class="label">تيليجرام</span>
-    </a>
-    <a href="https://www.facebook.com/share/17HvKBsQ6b" target="_blank" title="Facebook">
-      <i class="fab fa-facebook"></i>
-      <span class="label">فيسبوك</span>
-    </a>
-    <a href="https://x.com/ie_9ay" target="_blank" title="X">
-      <i class="fab fa-x-twitter"></i>
-      <span class="label">تويتر</span>
-    </a>
-    <a href="https://www.tiktok.com/@ie.9ay" target="_blank" title="TikTok">
-      <i class="fab fa-tiktok"></i>
-      <span class="label">تيك توك</span>
-    </a>
-    <a href="https://tellonym.me/ebwd860/1word" target="_blank" title="Tellonym">
-      <i class="fas fa-question-circle"></i>
-      <span class="label">تيلونيم</span>
-    </a>
+  <div class="header">
+    <img src="DFD6B69E-4D66-4D79-9090-C883A5DBA7FE.png" alt="ie9ay" class="profile-img" />
+    <h1>عبدالملك الشاوي</h1>
+    <p>أهلًا بكم في جميع حساباتي الرسمية ❤️</p>
   </div>
+
+  <a class="link-button insta" href="https://www.instagram.com/ie.9ay" target="_blank">انستقرام</a>
+  <a class="link-button tg" href="https://t.me/abdalmlkshafay" target="_blank">تيليجرام</a>
+  <a class="link-button fb" href="https://www.facebook.com/share/17HvKBsQ6b/" target="_blank">فيسبوك</a>
+  <a class="link-button tw" href="https://x.com/ie_9ay" target="_blank">تويتر (X)</a>
+  <a class="link-button tt" href="https://www.tiktok.com/@ie.9ay" target="_blank">تيك توك</a>
+  <a class="link-button telon" href="https://tellonym.me/ebwd860/1word" target="_blank">تيلونيم</a>
+
 </body>
 </html>
